Update build.gradle
testing customer